feat(user): add endpoint to retrieve events created by a user
